<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Games.HangManGame.HangManActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/category"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="@string/category"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hangman_start"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/hangman_start" />

            <ImageView
                android:id="@+id/construction1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/construction"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/construction1" />
            <ImageView
                android:id="@+id/construction2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/construction"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/construction2" />
            <ImageView
                android:id="@+id/construction3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/construction"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/construction3" />
            <ImageView
                android:id="@+id/construction4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/construction"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/construction" />

            <ImageView
                android:id="@+id/head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/head"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/head" />

            <ImageView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/body"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/body" />

            <ImageView
                android:id="@+id/arm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arm"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/arm1" />

            <ImageView
                android:id="@+id/arm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arm"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/arm2" />

            <ImageView
                android:id="@+id/leg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leg"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/leg1" />

            <ImageView
                android:id="@+id/leg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leg"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/leg2" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:background="#FFFFFFFF"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="4dp" />

        <GridView
            android:id="@+id/letters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FF000000"
            android:gravity="center|center_horizontal|center_vertical"
            android:horizontalSpacing="5dp"
            android:padding="5dp"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />

    </LinearLayout>

    <include
        android:id="@+id/include3"
        layout="@layout/end_game_button" />
</androidx.constraintlayout.widget.ConstraintLayout>